# emu68hatcher

./: .gitattributes  .gitignore  LICENSE  README.md  bootstrap.py  mkdocs.yml  pyproject.toml  setup.py
.githooks/: pre-commit
.github/workflows/: announce-release.yml  docs.yml  release.yml
docs/: download.md  flashing.md  index.md  installation.md  troubleshooting.md  usage.md
scripts/: macos-notarize.sh  macos-release.sh  macos-sign.sh  macos-test-install.sh
src/installer/linux/usr/share/applications/: AppName.desktop
src/installer/windows/: Installer.nsi
src/main/python/: main.py
src/main/python/emu68hatcher/: __init__.py  __main__.py  app.py
src/main/python/emu68hatcher/builder/: __init__.py  amiga_files.py  disk_manager.py  downloads.py  errors.py  hst_commands.py  hst_runner.py  package_installer.py  prefs.py  script_generator.py  script_injector.py  tools.py  workflow.py
src/main/python/emu68hatcher/builder/host/: __init__.py  archive.py  disk_claim.py  disk_enum.py  disk_writer.py  downloads.py  elevated_helper.py  elevation.py  hst_commands.py  hst_runner.py  macos_tcc.py  sparse.py  tools.py
src/main/python/emu68hatcher/builder/pipeline/: __init__.py  _selection.py  configure.py  configure_boot.py  configure_prefs.py  configure_scripts.py  create_image.py  download.py  finalize.py  flash.py  install_extras.py  install_packages.py  install_workbench.py  relocate.py  validate.py
src/main/python/emu68hatcher/builder/stages/: __init__.py  configure.py  create_image.py  download.py  finalize.py  install_packages.py  install_workbench.py  validate.py
src/main/python/emu68hatcher/builder/staging/: __init__.py  boingbag.py  files.py  icons.py  packages.py  prefs.py
src/main/python/emu68hatcher/builder/staging/scripts/: __init__.py  generator.py  injector.py
src/main/python/emu68hatcher/builder/staging/scripts/templates/: __init__.py  config_txt.j2
src/main/python/emu68hatcher/builder/templates/: __init__.py  config_txt.j2  onetimerun_wb.j2  shell_startup.j2  startup_sequence.j2
src/main/python/emu68hatcher/cli/: __init__.py  main.py
src/main/python/emu68hatcher/config/: __init__.py  defaults.py  loader.py  partition_helpers.py  schema.py
src/main/python/emu68hatcher/data/: __init__.py  data_manager.py  install_media.py  package_loader.py  package_resolver.py  package_schema.py  rom_detection.py  startup_files.py
src/main/python/emu68hatcher/data/local_packages/: README.md
src/main/python/emu68hatcher/data/local_packages/LocalAmigaPackages/: Roadshow-Demo-1.15.lha
src/main/python/emu68hatcher/data/local_packages/System/: _drawer.info  _tool.info
src/main/python/emu68hatcher/data/local_packages/System/C/: AreWeOnline  CE  ListDevices  TomCopy  TomDelete
src/main/python/emu68hatcher/data/local_packages/System/Devs/: Picasso96Settings  Picasso96Settings.UAE
src/main/python/emu68hatcher/data/local_packages/System/FirstBoot/: AUXRename  Ibrowse  PatchAkDatatypes  Pi4vsPi3_Pistorm  SetScreenMode_Pistorm
src/main/python/emu68hatcher/data/local_packages/System/FirstBootWB/: Cmdline
src/main/python/emu68hatcher/data/local_packages/System/Libs/: oc666.library
src/main/python/emu68hatcher/data/local_packages/System/OneTimeRun/: Pi4vsPi3_Pistorm
src/main/python/emu68hatcher/data/local_packages/System/OneTimeRunWB/: localesettings
src/main/python/emu68hatcher/data/local_packages/System/Pistorm/: Documentation  Documentation.info  Emu68-Updater.info  Emu68-Updater.rexx  HatcherTunings  Install Packages  Install Packages.info  SMB Config  SMB Config.info  TransferKick  TransferKick.info  Wifi Config  (+1 more)
src/main/python/emu68hatcher/data/reference/: adf_rules.yaml  bundles.yaml  icon_sets.yaml  install_media_hashes.csv  install_media_hashes.yaml  rom_hashes.csv  screen_modes.yaml  startup_files.yaml  tools.yaml
src/main/python/emu68hatcher/extractor/: __init__.py  adf.py  archive.py
src/main/python/emu68hatcher/gui/: __init__.py  dialogs.py  main_window.py  workers.py
src/main/python/emu68hatcher/gui/tabs/: __init__.py  display.py  emu68.py  kickstart.py  network.py  output.py  packages.py  partitions.py  start.py
src/main/python/emu68hatcher/gui/widgets/: __init__.py  partition_bar.py
src/main/python/emu68hatcher/utils/: __init__.py  hashing.py  host_tools.py  logging.py  paths.py  platform.py
tests/: __init__.py  conftest.py  test_amiga_files.py  test_config.py  test_hashing.py  test_hst_commands.py  test_package_installer.py  test_partition_helpers.py  test_pistorm_boot_fixes.py  test_prefs.py  test_schema_validators.py  test_script_injector.py
(+52 files in other folders)
