[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emu68-hatcher"
version = "0.1.0"
description = "Cross-platform tool for creating Emu68/PiStorm SD card images for Amiga emulation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Chris", email = "chris@example.com"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
keywords = ["amiga", "emu68", "pistorm", "retro", "emulation", "raspberry-pi"]

dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = [
    "emu68-hatcher[gui,dev]",
]

[project.scripts]
emu68-hatcher = "emu68hatcher.cli.main:cli"

[project.urls]
Homepage = "https://github.com/your-repo/emu68-hatcher"
Documentation = "https://github.com/your-repo/emu68-hatcher#readme"
Repository = "https://github.com/your-repo/emu68-hatcher"
Issues = "https://github.com/your-repo/emu68-hatcher/issues"

# Package discovery handled by setup.py for complex multi-root structure

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
